[package]
name = "bpts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2="*"
tempfile ="*"
string-builder="0.2.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
 
[[bench]]
name = "freelist_b"
harness = false


[features]

verbose = []